# formal-ai

./: .dockerignore  .gitattributes  .gitignore  .gitkeep  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOALS.md  LEGAL-COMPLIANCE.md  NON-GOALS.md  README.md  REQUIREMENTS.md  ROADMAP.md  VISION.md  app.js  build.rs  clippy.toml  compose.yaml  crates.js  help.html  package.json  settings.html  src-files.js  tsconfig.json
.github/: actionlint.yaml  pull_request_template.md
analysis/: issue-488-todo.md
changelog.d/: 20260512_110000_formal_ai_initial_implementation.md  20260512_110000_formal_ai_prototype.md  20260512_170000_fix_pages_workflow_deploy.md  20260512_181444_issue_6_demo_ui.md  20260512_193000_issue_10_demo_reporting.md  20260512_193000_issue_8_telegram_bot.md  20260512_200000_telegram_polling_cli.md  20260513_142400_issue_12_vision_docs.md  20260514_210000_issue_12_mvp_test_suite.md  20260514_210000_issue_12_requirements_test_suite.md  20260514_220000_issue_12_universal_solver.md  20260515_000000_fix_incompatible_unit_query.md  20260515_120000_clarification_intent.md  20260515_120000_issue_14_unified_demo.md  20260515_180000_issue_16_universal_seed.md  20260515_184419_issue_27_fixes_and_improvements.md  20260515_190000_issue_21_multilingual_urls.md  20260515_200000_issue_37_conversation_summary_phrases.md  20260515_204450_issue_39_inappropriate_content.md  20260515_210000_issue_30_nazovi_tsvet.md  20260515_210000_issue_44_unknown_prompt_report_title.md  20260515_210000_issue_49_russian_capabilities_and_confusion.md  20260515_210000_issue_50_shabbat_shalom_greeting.md  20260515_212304_bigint_arithmetic.md  20260515_215000_cargo_lock_release_sync.md  20260515_220000_issue_18_full_memory.md  20260515_220000_issue_20_concept_context.md  20260515_220000_issue_51_meta_explanation_russian.md  20260515_230000_issue_24_pages_e2e.md  20260515_230000_issue_31_kiss_principle.md  20260515_235000_issue_40_demo_hint.md  20260515_235900_issue_52_how_it_works.md  20260515_235900_issue_53_russian_hello_world.md  20260516_000000_issue_35_write_script_intent.md  20260516_000000_issue_41_kupi_slona.md  20260516_000000_issue_42_opinion_question.md  20260516_000000_issue_69_who_is_typo_correction.md  20260516_110000_issue_39_physical_action_question.md  20260516_110000_issue_70_wikipedia_disambiguation_fallback.md  20260516_113000_issue_66_rasskazhi_za_telegram_ads.md  (+412 more)
data/: README.md  source-index.lino
desktop/: main.cjs  package-lock.json  package.json  preload.cjs
docs/: REQUIREMENTS.md  USER-JOURNEYS.md  benchmarks.md  meta-algorithm.md  upload-memory.md
docs/case-studies/issue-410/raw-data/web-search/: Cargo.toml  README.md  files.txt  git-head.txt  issues.json  package.json  provider-code-index.txt  provider-registry.json  repo.json
examples/: backfill_wikidata_lino.rs  basic_usage.rs  build_translation_dictionary.rs  classify_repair.rs  debug_extract.rs  dump_google_trends_catalog.rs  dump_google_trends_learning.rs  dump_learning_ledger.rs  dump_question_catalog.rs  dump_rebuild_plan.rs  dump_repair_strategies.rs  dump_self_ast.rs  dump_self_ast_agent_cli_session.rs  dump_self_ast_census.rs  dump_self_healing_case.rs  dump_source_graph.rs  dump_source_links.rs  explain_formal_ai.rs  issue-661-statement-audit-evidence.json  issue_340_emit_variants.rs  issue_386_diagnostic_trace.rs  issue_386_gen_arith_table.rs  issue_386_print_calc_roles.rs  issue_412_oracle_smoke.rs  issue_449_interpretable_learning.rs  issue_468_agentic_loop.rs  issue_468_formalize_text.rs  issue_468_text_formalization.rs  issue_488_telegram_thinking.rs  issue_493_dump_market_refs.rs  issue_498_parse_google_trends_rss.rs  issue_499_dump_agent_cli_session.rs  issue_499_repro.rs  issue_531_pattern_inference_demo.rs  issue_535_statement_verification.rs  issue_540_dump_dreaming_audit.rs  issue_559_meta_core.rs  issue_563_folder_summary.rs  issue_674_procedure_compiler.rs  issue_686_dump_associative_learning.rs  (+31 more)
experiments/: capture-issue-21-after.js  capture-issue-353.cjs  check-seed-loader-list-parsing.cjs  check_worker_followup.mjs  closure_audit.py  codemod-h-to-jsx.mjs  composer-closeups.mjs  convert_base64_seed_to_text.rs  create_issue_349_roadmap.py  debug_followup.mjs  decode_seed_codepoints.py  demo-cursor.mjs  discover_qids.py  dump_thinking.rs  edit_parse_check.rs  fetch-wikidata-cache.mjs  finalize_import.py  fix-recall-regex.cjs  gather_common_nouns.py  generate-coding-idioms-embed.mjs  i18n-check.mjs  issue-103-language-coverage.rs  issue-103-probe-unknown.rs  issue-107-browser-provider-probe.mjs  issue-133-wasm-bridge.mjs  issue-140-prefilled-url-budget.mjs  issue-180-deformalize-trace.mjs  issue-1963-harness.html  issue-282-wasm-parity.mjs  issue-312-worker-parity.mjs  issue-324-js-worker.mjs  issue-340-worker-parity.mjs  issue-349-issue-map.json  issue-361-cross-runtime-parity.mjs  issue-386-apply-meanings-worker.mjs  issue-386-apply-mirror.mjs  issue-386-audit-language-coverage.mjs  issue-386-embed-operation-vocabulary.mjs  issue-386-fix-behavior-rules-quotes.mjs  issue-386-gate.sh  (+148 more)
formal_ai/: all.html  index.html  sidebar-items.js
scripts/: audit-total-closure.py  build-views.py  check-associative-terminology.rs  check-crate-package-size.rs  check-file-size.rs  check-hardcoded-language.rs  check-secrets.sh  check-wasm-worker-size.rs  check-worker-line-budget.rs  classify-agent-cli-stderr.sh  clean-seed-readability.rs  close-total.py  collect-changelog.rs  create-github-release.rs  decode-github-issue-url.rs  desktop-release-resolve.sh  detect-code-changes.rs  download-datasets.rs  free-runner-disk.sh  generate-role-registry.py  ground-lexemes.py  ground-meanings.rs  ground-wiktionary.py  ground-wordnet.py  hardcoded-language-allowlist.txt  install-node-dependencies.sh  install-rust-script.sh  install.ps1  install.sh  migrate-empty-facet-fields.rs  migrate-empty-redefinition-fields.rs  migrate-meaning-seed.rs  migrate-pipe-lists.rs  mine-hive-mind-dataset.rs  opencode-conversation-to-lino.py  publish-crate.rs  reproduce-issue-538.sh  self-hosting-metric.rs  (+10 more)
(+9812 files in other folders)
