[package]
name = "formal-ai"
version = "0.182.0"
edition = "2021"
description = "Formal symbolic AI implementation with OpenAI-compatible APIs"
readme = "README.md"
license = "Unlicense"
keywords = ["formal-ai", "symbolic-ai", "openai", "links"]
categories = ["command-line-utilities", "web-programming::http-server"]
repository = "https://github.com/link-assistant/formal-ai"
documentation = "https://github.com/link-assistant/formal-ai"
rust-version = "1.70"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/data/**",
    "/src/**",
]
build = "build.rs"

[lib]
name = "formal_ai"
path = "src/lib.rs"

[[bin]]
name = "formal-ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
doublets = { version = "0.3.0", optional = true }
lino-arguments = "0.3"
lino-objects-codec = "0.2.1"
link-calculator = "0.17.2"
# Primary CST/AST engine: the link-foundation meta-language links network.
# It ships real tree-sitter grammars for most of our targets and exposes a
# single mutable links-network representation (https://github.com/link-foundation/meta-language).
meta-language = "0.38"
mem = { package = "platform-mem", version = "0.3.0", optional = true }
nom = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bridge grammars for the languages meta-language does not yet cover
# (TypeScript, Go, Ruby). Tracked upstream; see data/seed/meanings-program-cst.lino.
# Pinned to the same tree-sitter 0.25.x line meta-language depends on so the
# whole dependency tree resolves to a single tree-sitter build.
tree-sitter = "0.25"
tree-sitter-go = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-typescript = "0.23.2"

[features]
default = ["doublets-native"]
doublets-native = ["dep:doublets", "dep:mem"]

[dev-dependencies]
regex = "1"
walkdir = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "source"
path = "tests/source/mod.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
