[package]
name = "formal-ai"
version = "0.301.0"
edition = "2021"
description = "Formal symbolic AI implementation with OpenAI-compatible APIs"
readme = "README.md"
license = "Unlicense"
keywords = ["formal-ai", "symbolic-ai", "openai", "links"]
categories = ["command-line-utilities", "web-programming::http-server"]
repository = "https://github.com/link-assistant/formal-ai"
documentation = "https://github.com/link-assistant/formal-ai"
rust-version = "1.96"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/data/**",
    "/src/**",
]
build = "build.rs"

# docs.rs sets DOCS_RS while building dependencies. meta-language currently
# pulls lindera-jieba, whose DOCS_RS build path is broken upstream
# (lindera/lindera#750). Keep the complete engine enabled for every normal build,
# while letting docs.rs render this crate's API without executing that transitive
# build script.
[package.metadata.docs.rs]
no-default-features = true

[lib]
name = "formal_ai"
path = "src/lib.rs"

[[bin]]
name = "formal-ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
doublets = { version = "0.4.0", optional = true }
lino-arguments = "0.3"
lino-objects-codec = "0.2.1"
links-notation = "0.13.0"
link-calculator = "0.19.0"
# CST/AST engine: the link-foundation meta-language links network. It ships
# real tree-sitter grammars for every language we target and exposes a single
# mutable links-network representation, so it is the sole CST/AST engine here
# (https://github.com/link-foundation/meta-language).
meta-language = { version = "0.45.0", optional = true }
mem = { package = "platform-mem", version = "0.3.0", optional = true }
nom = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fs2 = "0.4"
thread-priority = "1"
toml_edit = "0.25.11"

[features]
default = ["doublets-native", "meta-language"]
doublets-native = ["dep:doublets", "dep:mem"]
meta-language = ["dep:meta-language"]

[dev-dependencies]
# The same codec the library encodes with, so tests can hold published
# artifacts to the notation they claim to be written in.
lino-objects-codec = "0.2.1"
regex = "1"
walkdir = "2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "source"
path = "tests/source/mod.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
