[package]
name = "web-search"
version = "0.2.0"
edition = "2021"
description = "A multi-provider web search aggregator with reranking support"
license = "Unlicense"
repository = "https://github.com/link-assistant/web-search"
keywords = ["web-search", "search-engine", "google", "duckduckgo", "bing"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

[lib]
name = "web_search"
path = "src/lib.rs"

[[bin]]
name = "web-search"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.22"
regex = "1"
thiserror = "2.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = ["server"]
server = []

# Lints — adopt the safe baseline from the link-foundation Rust pipeline template.
# `unsafe_code = "forbid"` matches the existing 100% safe codebase and is enforced
# in CI via `RUSTFLAGS: -Dwarnings` (see .github/workflows/rust.yml).
[lints.rust]
unsafe_code = "forbid"

# Optimized release profile from the Rust pipeline template: smaller, faster binaries
# for the CLI/microservice without affecting debug/test builds.
[profile.release]
lto = true
codegen-units = 1
strip = true
